overlays/production/route-mng.yaml
apiVersion: route.openshift.io;/v1
kind: Route
metadata:
  labels:
    app: tonodejs
    name: frontend
  name: frontend
spec:
  hosts: todo.apps.ocp4-mng.example.org
  path: "/todo"
  to:
    kind: Service
    name: prod-frontend
    weight: 100
  wildcardPolicy: None
